fix media query layout bug

--- a/styles/products_index.scss
+++ b/styles/products_index.scss
@@ -79,6 +79,7 @@ main.all-listings {
       text-align: left;
       flex-direction: column;
       padding: 1em 0 0 0;
+      height: 100%;
 
       p {
         margin-top: 0.5em;
